# cadis

./: .all-contributorsrc  .env.example  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs_or_design.yml  feature_request.md  feature_request.yml  tool_runtime.yml
.github/workflows/: ci.yml  npm-publish.yml  platform-baseline.yml  pr-autoreview.yml  progress.yml  release.yml  security.yml
apps/: README.md
apps/cadis-hud/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
apps/cadis-hud/src/: App.tsx  main.tsx
apps/cadis-hud/src-tauri/: Cargo.toml  tauri.conf.json
apps/cadis-hud/src-tauri/capabilities/: default.json
apps/cadis-hud/src-tauri/icons/: icon.icns
apps/cadis-hud/src-tauri/src/: lib.rs  main.rs
apps/cadis-hud/src/lib/: agent-specialists.ts  agents-roster.ts
apps/cadis-hud/src/lib/voice/: stt.test.ts  stt.ts  tts.ts  voices.ts
apps/cadis-hud/src/styles/: globals.css  themes.test.ts  themes.ts
apps/cadis-hud/src/ui/: StatusBar.tsx  WindowChrome.tsx  cadisActions.test.ts  cadisActions.ts  hudLiveProgress.acceptance.test.tsx  hudState.test.ts  hudState.ts
apps/cadis-hud/src/ui/approvals/: ApprovalCard.tsx  ApprovalStack.tsx
apps/cadis-hud/src/ui/chat/: ChatPanel.test.tsx  ChatPanel.tsx
apps/cadis-hud/src/ui/codework/: CodeWorkPanel.tsx
apps/cadis-hud/src/ui/fixtures/: mockCadisDaemonEventStream.ts
apps/cadis-hud/src/ui/orbital/: AgentWidget.tsx  ArcAvatar.tsx  ArcAvatarScene.tsx  OrbitalHUD.tsx  RamaOrb.tsx  WorkerTree.tsx  arcAvatarShaders.ts  arcAvatarTypes.ts
apps/cadis-hud/src/ui/settings/: AgentRenameDialog.test.tsx  AgentRenameDialog.tsx  ConfigDialog.test.tsx  ConfigDialog.tsx  ModelsConfig.tsx  ThemePicker.tsx  VoiceConfig.tsx
apps/cadis-hud/src/ui/wizard/: Wizard.tsx  persistence.ts
config/: README.md  cadis.example.toml
crates/: README.md
crates/cadis-avatar/: Cargo.toml  README.md
crates/cadis-avatar/src/: lib.rs  wgpu_renderer.rs
crates/cadis-cli/: Cargo.toml  README.md
crates/cadis-cli/src/: main.rs
crates/cadis-cli/tests/: integration.rs
crates/cadis-core/: Cargo.toml  README.md
crates/cadis-core/src/: lib.rs  orchestrator.rs  search_index.rs  tools.rs  voice.rs  workspace.rs
crates/cadis-daemon/: Cargo.toml  README.md
crates/cadis-daemon/src/: main.rs
crates/cadis-hud/: Cargo.toml  README.md
crates/cadis-hud/src/: connection.rs  main.rs  theme.rs  types.rs  widgets.rs
crates/cadis-memory/: Cargo.toml  README.md
crates/cadis-memory/src/: lib.rs
crates/cadis-models/: Cargo.toml  README.md
crates/cadis-models/src/: lib.rs
crates/cadis-output-filter/: Cargo.toml  README.md
crates/cadis-output-filter/src/: lib.rs
crates/cadis-policy/: Cargo.toml  README.md
crates/cadis-policy/src/: lib.rs
crates/cadis-protocol/: Cargo.toml  README.md
crates/cadis-protocol/benches/: protocol_bench.rs
crates/cadis-protocol/src/: lib.rs
crates/cadis-store/: Cargo.toml  README.md
crates/cadis-store/src/: lib.rs
crates/cadis-telegram/: Cargo.toml  README.md
crates/cadis-telegram/src/: lib.rs
docs/: 00_PROJECT_CHARTER.md  01_PRD.md  02_BRD.md  03_FRD.md  04_TRD.md  05_ARCHITECTURE.md  06_IMPLEMENTATION_PLAN.md  07_MASTER_CHECKLIST.md  08_ROADMAP.md  09_OPEN_SOURCE_STANDARD.md  10_RISK_REGISTER.md  11_DECISIONS.md  12_TEST_STRATEGY.md  13_GLOSSARY.md  14_SECURITY_THREAT_MODEL.md  15_PROTOCOL_DRAFT.md  16_CONFIG_REFERENCE.md  17_DEVELOPER_SETUP.md  18_INSTALLATION.md  19_REQUIREMENTS_TRACEABILITY.md  20_RAMACLAW_UI_ADAPTATION.md  21_UI_FEATURE_PARITY_CHECKLIST.md  22_UI_STATE_PROTOCOL_CONTRACT.md  23_UI_DESIGN_SYSTEM.md  24_CONTRIBUTOR_SKILLS.md  25_MEMORY_CONCEPT.md  26_WULAN_AVATAR_ENGINE.md  27_WORKSPACE_ARCHITECTURE.md  28_PLATFORM_BASELINE.md  29_PROTOCOL_FREEZE.md  30_STABLE_CLI.md  31_STORAGE_FORMAT.md  BLUEPRINT.md  KNOWN_LIMITATIONS.md  README.md  progress.json
docs/assets/readme/: README.md
docs/standards/: 00_STANDARD_INDEX.md  01_CONTRIBUTION_STANDARD.md  02_CODE_STANDARD.md  03_ARCHITECTURE_STANDARD.md  04_SECURITY_STANDARD.md  05_TESTING_STANDARD.md  06_DOCUMENTATION_STANDARD.md  07_RELEASE_STANDARD.md  08_GOVERNANCE_STANDARD.md  09_PROTOCOL_STANDARD.md  10_AGENT_STANDARD.md  11_TOOL_RUNTIME_STANDARD.md  12_APPROVAL_POLICY_STANDARD.md  13_MODEL_PROVIDER_STANDARD.md  14_CONFIG_PERSISTENCE_STANDARD.md  15_UI_HUD_STANDARD.md  16_VOICE_STANDARD.md  17_PERFORMANCE_STANDARD.md  18_OBSERVABILITY_STANDARD.md  19_LICENSE_DEPENDENCY_STANDARD.md  20_CI_CD_STANDARD.md  21_RELEASE_NOTES_STANDARD.md  22_PR_REVIEW_WORKFLOW_STANDARD.md  README.md
examples/: README.md
npm/cadis/: LICENSE  README.md  package.json
npm/cadis-darwin-arm64/: package.json
npm/cadis-darwin-x64/: package.json
npm/cadis-linux-arm64/: package.json
npm/cadis-linux-x64/: README.md  package.json
npm/cadis-win32-x64/: package.json
npm/cadis/scripts/: install.js
scripts/: license-audit.sh  screenshot-parity.sh  update-progress.sh
skills/: README.md
skills/cadis-model-provider/: SKILL.md
skills/cadis-open-source/: SKILL.md
skills/cadis-policy-security/: SKILL.md
skills/cadis-protocol/: SKILL.md
skills/cadis-ramaclaw-ui/: SKILL.md
skills/cadis-rust-core/: SKILL.md
skills/cadis-tool-runtime/: SKILL.md
skills/cadis-voice/: SKILL.md
wiki/: Configuration.md  FAQ.md  Getting-Started.md  Home.md  Troubleshooting.md
