[workspace]
resolver = "2"
members = ["crates/cadis-protocol"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cadis-ai/cadis"
homepage = "https://github.com/cadis-ai/cadis"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
