[workspace]
resolver = "2"
members = [
    "crates/cadis-cli",
    "crates/cadis-avatar",
    "crates/cadis-core",
    "crates/cadis-daemon",
    "crates/cadis-hud",
    "crates/cadis-memory",
    "crates/cadis-models",
    "crates/cadis-policy",
    "crates/cadis-protocol",
    "crates/cadis-store",
    "crates/cadis-telegram",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Growth-Circle/cadis"
homepage = "https://github.com/Growth-Circle/cadis"
readme = "README.md"

[workspace.dependencies]
cadis-avatar = { path = "crates/cadis-avatar" }
cadis-core = { path = "crates/cadis-core" }
cadis-memory = { path = "crates/cadis-memory" }
cadis-models = { path = "crates/cadis-models" }
cadis-policy = { path = "crates/cadis-policy" }
cadis-protocol = { path = "crates/cadis-protocol" }
cadis-store = { path = "crates/cadis-store" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
eframe = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"
