[package]
name = "cadis-avatar"
version = "1.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[features]
default = []
bevy-renderer = []
face-tracking = []
wgpu-renderer = []

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
