[package]
name = "cadis-cli"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "cadis"
path = "src/main.rs"

[dependencies]
cadis-protocol.workspace = true
cadis-store.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
