[package]
name = "cadis-core"
version = "1.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
cadis-models.workspace = true
cadis-policy.workspace = true
cadis-protocol.workspace = true
cadis-store.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
