[package]
name = "cadis-daemon"
version = "1.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "cadisd"
path = "src/main.rs"

[dependencies]
cadis-core.workspace = true
cadis-models.workspace = true
cadis-protocol.workspace = true
cadis-store.workspace = true
serde_json.workspace = true

[lints]
workspace = true
