[package]
name = "cadis-hud"
version = "1.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[[bin]]
name = "cadis-hud"
path = "src/main.rs"

[dependencies]
cadis-protocol.workspace = true
cadis-store.workspace = true
eframe.workspace = true
serde_json.workspace = true

[lints]
workspace = true
