[package]
name = "cadis-memory"
version = "1.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
