[package]
name = "cadis-policy"
version = "1.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
cadis-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
