[package]
name = "cadis-protocol"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "protocol_bench"
harness = false

[lints]
workspace = true
