[package]
name = "cadis-store"
version = "0.9.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
cadis-policy.workspace = true
cadis-protocol.workspace = true
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
