[package]
name = "cadis-telegram"
version = "1.2.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
cadis-protocol.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
