[package]
name = "cadis-hud"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cadis-ai/cadis"
homepage = "https://github.com/cadis-ai/cadis"

[workspace]

[lib]
name = "cadis_hud_lib"
path = "src/lib.rs"

[[bin]]
name = "cadis-hud"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2.10", features = [] }
toml = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unsafe_code = "forbid"
